# EigenNumpyBenchmark

./: .gitignore  CMakeLists.txt
bindings/: MyPyEigen.cpp  pyproject.toml  setup.py
bindings/MyPyEigen.egg-info/: PKG-INFO  SOURCES.txt
docs/: README.md  WORKING_DOC.md
include/: append.h  append_nd.h  append_nd_impl.hpp  concat.h  concat_nd.h  concat_nd_impl.hpp  fft.h  inner.h  matmul.h  matmult.h  outer.h  rot90.h  stack_nd.h  stack_nd_impl.hpp
src/: append.cpp  concat.cpp  fft.cpp  inner.cpp  matmul.cpp  matmult.cpp  outer.cpp  rot90.cpp
tests/cpp_tests/: benchmark_eigen.cpp  test_append.cpp  test_append_nd.cpp  test_concat.cpp  test_concat_nd.cpp  test_fft.cpp  test_inner.cpp  test_matmul.cpp  test_matmult.cpp  test_outer.cpp  test_rot90.cpp  test_stack_nd.cpp
tests/python_tests/: benchmark_0.1.ipynb  benchmark_0.2.ipynb  benchmark_0.3_nd.ipynb  benchmark_0.4_fft.ipynb  test.ipynb  test_MyPyEigen.ipynb
